<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Configurações</string>
    <string name="app_name">Casa393</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_save">Salvar</string>
    <string name="erro_parametros">Dados para comunicação com o servidor não fornecidos</string>
    <string name="erro_comunicacao">Não foi possível estabelecer a comunicação com o servidor. Verifique os parâmetros.</string>
    <string name="erro_xml">Não foi possível obter dados dos dispositivos</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_lista">Locais</string>
    <string name="pavimentos">Pavimentos</string>
    <string name="locais">Locais</string>
    <string name="sistemas">Sistemas</string>
    <string name="title_activity_lista_itens">ListaItensActivity</string>
    <string name="refresh">Atualizar</string>
    <string name="labelLuzSimples1">Local</string>
    <string name="labelLuzSimples2">Descricao</string>
    <string name="labelLuzSimples3">Luz Simples</string>
    <string name="botaoOnOFF">Ligado</string>
    <string name="temperatura">30ºC</string>
    <string name="tempo">00:00:00</string>
    <string name="retry">Tente novamente</string>
    <string name="servidor">Servidor</string>
    <string name="senha">Senha</string>
    <string name="title_activity_configura">Configurações</string>

</resources>
